--- a/SerialPoart/SerialPoart.csproj
+++ b/SerialPoart/SerialPoart.csproj
@@ -50,6 +50,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Crc.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Crc.Designer.cs">
+      <DependentUpon>Crc.cs</DependentUpon>
+    </Compile>
     <Compile Include="DStringExtend.cs" />
     <Compile Include="FilesOperator.cs" />
     <Compile Include="Form1.cs">
@@ -68,6 +74,9 @@
     <Compile Include="programme_serial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="str.cs" />
+    <EmbeddedResource Include="Crc.resx">
+      <DependentUpon>Crc.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
